--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img class="mainlogo" src="images/Screenshot_2024-02-17_105928-removebg-preview.png">
                 <a href="index.html" class="logo"><span>Med</span>UrgencyHub</a>
                 <ul class="menu">
-                    <li><a href="maps.html">Find A Doctor</a></li>
+                    <li><a href="maps.html">..  Find A Doctor</a></li>
                     <li><a href="#our-services">Our Services</a></li>
                     <li><a href="tips.html">Tips</a></li>
                 </ul>
